@@ -228,8 +228,13 @@ fi
 AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(gettimeofday,AC_DEFINE(GETTIMEOFDAY),[AC_CHECK_FUNCS(lrand48,AC_DEFINE(LRADN48))])
 AC_CHECK_FUNCS(getrusage,AC_DEFINE(GETRUSAGE_2),[AC_CHECK_FUNCS(times,AC_DEFINE(TIMES_2))])
-AC_CHECK_FUNCS(setproctitle,AC_DEFINE(HAVE_SETPROCTITLE))
-AC_CHECK_LIB(util,setproctitle,AC_DEFINE(HAVE_SETPROCTITLE) IRCDLIBS="$IRCDLIBS-lutil") 
+AC_CHECK_FUNCS(setproctitle,AC_DEFINE(HAVE_SETPROCTITLE),[
+AC_CHECK_LIB(util,setproctitle,AC_DEFINE(HAVE_SETPROCTITLE) IRCDLIBS="$IRCDLIBS-lutil",[
+AC_EGREP_HEADER([#define.*PS_STRINGS.*],sys/exec.h,AC_DEFINE(HAVE_PSSTRINGS),[
+AC_CHECK_FUNCS(pstat,AC_DEFINE(HAVE_PSTAT))
+])
+])
+])
 AC_CACHE_CHECK(what type of signals you have, ac_cv_sigtype, [
 AC_TRY_RUN([
 #include <signal.h>
