@@ -915,3 +915,5 @@ seen. gmtime warning still there
 - Made the /kline hostmask checker work like the G:line checker, (it was too easy to K:line *@*)
 - Fixed a bug where ./unreal rehash would kill the IRCd instead of rehashing :P
 - Made ./unreal restart (to restart Unreal) and made the pid file location more accurate
+- Added support for PS_STRINGS and pstat to change the progrma name (couldn't test since I don't have an OS
+  that uses them)
